# docker_and_docker-compose

./: Dockerfile  Quick Reference  README.md
Docker Full Project/: .env.broad  .env.local  .env.test  .gitignore  Dockerfile  compose.yml  pyproject.toml
Docker Full Project/Project/routers/: roles_permissions.py
Docker Full Project/Project/tests/: test_organisations.py
Docker Full Project/Project/utils/: __init__.py  utils.py
Docker Full Project/ValidationStudioCloud/: __init__.py  demo.py  dependencies.py  initialize.py  main.py  settings.py
Docker Full Project/ValidationStudioCloud/db_creator/: db_creator_main.py  helper_functions.py  organisations.py
Docker Full Project/ValidationStudioCloud/models/: data_transforms.py  drivers.py  facility.py  instructions.py  instructions_arguments.py  (+18 more)
Docker_Full_Project/: .env.broad  .env.local  .env.test  .pre-commit-config.yaml  Dockerfile  compose.yml  pyproject.toml
Docker_Full_Project/Project/: dependencies.py  main.py  settings.py
Docker_Full_Project/Project/models/: __init__.py
Docker_Full_Project/Project/tests/: pytest_helpers.py
Docker_Full_Project/Project/utils/: bson_object_id.py  exceptions.py  mongo_utils.py  rest_controller_utils.py  rest_utils.py  utils.py
app/: main.py
mount_file_dir_1/: pgm1.py
proj_with_db_bind_mount_poetry/: Notes  compose.yml
proj_with_db_bind_mount_poetry/app/: main.py
proj_with_db_bind_mount_poetry/mount_file_dir_2/: file_2
project1/: compose.yml
project1/app/: file_demo  main.py
project1/mount_file_dir_1/: file_1  pgm1.py
project2/: pyproject.toml
(+31 files in other folders)
